@@ -1,3 +1,15 @@
+2010-01-13  Steve Block  <steveblock@google.com>
+
+        Update appendClassName in jni_runtime.cpp to use WebCore::StringBuilder, rather than JSC::StringBuilder.
+        https://bugs.webkit.org/show_bug.cgi?id=33586
+
+        Avoiding the JSC version of StringBuilder allows this file to be used with both JSC and V8 on Android.
+
+        No new tests, refactoring only.
+
+        * bridge/jni/jni_runtime.cpp: Modified.
+        (JavaMethod::signature): Modified. Use WebCore::StringBuilder.
+
 2010-01-13  Kent Hansen  <kent.hansen@nokia.com>
 
         Reviewed by Timothy Hatcher.
